--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -1,8 +1,25 @@
-\chapter{Introducción}
+\chapter{Perspectivas}
+
+
+Este capítulo espera contextualizar al lector en mecánica estadística, sus ideas básicas, y mostrar algunas herramientas de la teoría cuántica de la información. Se expondrá  primero la manera típica de introducir la mecánica estadística, basada en la perspectiva de los ensambles de Gibbs. Luego se explicará la mecánica cuántica siguiendo el formalismo del operador densidad, se mostrarán sus ventajas respecto al formalismo de función de onda.
+
+
+
+
+
+
 
 \section{Recuento Histórico}
 Este recuento histórico sigue los capítulos 1,2 y 3  de \cite{MullerHistory}.
 \\
+La mecánica clásica entregada por Newton y perfeccionada por Hamilton y Lagrange da el inicio a la física actual. La física clásica tiene un amplio alcance dando predicciones acordes con los experimentos. Sin embargo ya se mostraba que esta teoría no podía estudiar todos los aspectos de la naturaleza. Ya desde siglo 18 se habían dado muchos indicios sobre otra teoría que debía tratar con conceptos diferentes a los tratados comúnmente por la mecánica. La teoría sobre el calor fue evolucionando siendo guiada por los experimentos de Graf von Rumford, Julius Mayer, James Prescott Joule. Por otro lado Nicolas Carnot trabajaba en motores de calor y sus consecuencias teóricas. Poco a poco la termodinámica fue tomando la cara actual con ayuda de Benoît Clapeyron, Lord Kelvin, Rudolf Clausius. 
+\\
+\\
+La termodinámica se diferencia de las demás teorías físicas porque no propone nuevas leyes, simplemente exponen qué ocurre con las propiedades de un sistema macroscópico en equilibrio, por ejemplo la primera ley de la termodinámica simplemente expone cómo la energía del sistema es constante sin importar que proceso se lleve acabo. La termodinámica fue basada en los experimentos y organizada bajo unos postulados \cite{CallenThermo}, sus predicciones eran respaldadas experimentalmente ayudando a la innovación e industria; pero la termodinámica no se interesaba por encontrar una conexión entre sus resultados y los constituyentes de la materia.\\
+De este problema nace la mecánica estadística, sus esfuerzos iniciales eran considerar la materia hecha de partículas y de allí poder predecir todas las propiedades térmicas macroscópicas ya encontradas por la termodinámica. Las personas que más ayudaron a la creación de esta teoría fueron Gibbs, Boltzmann y Maxwell. Ellos le dieron las ideas principales y moldearon la teoría para poder tener métodos generales a aplicaciones de diferentes tipos, los métodos producidos por Gibbs son los que usualmente se utilizan.
+\\
+\\
+
 La mecánica estadística es la base conceptual de la termodinámica pero históricamente primero apareció la termodinámica. La termodinámica fue la agrupación de varias ideas en el siglo diecinueve que encerraban varios tipos de experimentos  y nociones que existían desde la antigua Grecia. Aunque las ideas que surgieron en la antigüedad se han ido refinando como ejemplo Klaudios Galenos (133-200 A.C) suponía que la influencia del clima sobre los fluidos del cuerpo podría determinar el carácter de una persona. Así decía que los habitantes del norte frío y húmedo eran salvajes y violentos, al contrario de los habitantes del sur, caliente y seco, eran flácidos y mansos \cite{MullerHistory}. Esto muestra que la idea de temperatura ha sido conocida de alguna u otra manera. 
 \\
 Ya en el año 1578  Johannis Hasler presentó una tabla de las temperaturas corporales de las personas en relación a la altura en la que vivían. Pero como se conoce ahora mientras se tenga una buena salud no importa la altura se debe tener la misma temperatura corporal. Este error fue debido a los instrumentos de medición usados en esa época. Ya en el inicio del siglo 17 ya se tenía el termómetro. Gracias a este instrumento muchas ideas equivocadas dadas por la subjetividad de los sentidos sobre el calor y el frío se fueron eliminando. Ya en los años 1700 empezaron a aparecer las escalas de temperatura, hubo incluso 18 escalas en algún tiempo. En 1848 William Thompson (Lord Kelvin)  introdujo la escala absoluta o la escala Kelvin. Esta cuenta desde el cero absoluto en adelante, el punto de ebullición del agua a  1 atm es 373.15 Kelvin.
@@ -31,7 +48,7 @@ Carnot seguía creyendo en la teoría calórica para llegar a estas ideas no fue
 \\
 Ya en 1850 se estaba asegurando que la teoría calórica estaba mal formulada y se debía hacer algo; Clausius retocó algunas ideas de Carnot y pudo encontrar la eficiencia del ciclo de Carnot. Clausius le dio forma a la termodinámica actual, hasta los cursos actuales de termodinámica siguen un artículo de Clausius que habla de gases ideales y vapor húmedo \cite{MullerHistory}. Clausius amplió sus investigaciones a ciclos no infinitesimales y a procesos no reversibles, él fue quien dio la idea de la entropía y sus propiedades. Con eso propuso la segunda ley de la termodinámica: El calor no puede pasar solo de un cuerpo frío a un cuerpo caliente. Clausius llamó $S=\frac{Q}{T}$ la entropía y vio que esto era lo que se conservaba en un ciclo de Carnot. Pero en términos microscópicos no se conocía el significado de $S$.
 \\\
-\section{Teoría Cinética}
+\section{Boltzmann}
 Paralelamente a mitad del siglo 19 se trabajaba en la teoría cinética de los gases. Esta reposaba en dos suposiciones la primera que los gases eras sistemas mecánicos de muchas partículas idénticas. La segunda era que debido a la gran cantidad de partículas se debía introducir probabilidades para así ver algunas regularidades que salían debido a las configuraciones de las moléculas. Personas como Calusius, Maxwell (1831-1879) y Boltzmann (1844-1906) trabajaron en esta área y produjeron resultados importantes pese a que concordaban con los resultados experimentales, hubo muchas discusiones sobre las hipótesis usadas para llegar a estos resultados. 
 \\
 Por ejemplo en los trabajos de Clausius se hace uso de los siguientes supuestos para gases en reposo y en equilibrio térmico: Las moléculas que están dentro de un recipiente se encuentran distribuidas con la misma densidad en todo el recipiente, la distribución de velocidades es igual en todo el recipiente, todas las direcciones de velocidad son igual de probables. Estas tres hipótesis son el inicio para ver los sistemas mecánicos con una perspectiva probabilística. 
@@ -74,11 +91,64 @@ Una de las objeciones que recibió fue sobre la posibilidad de poner todas las v
 \\
 Otro problema dado por E. Zermelo es que Poincaré había demostrado que en ese modelo cinético de un gas aislado, el sistema secomportaba quasiperiódico. Esto quiere decir que la función H puede ir asumiendo valores más grandes después de un periodo. 
 \\
-\section{Mecánica Estadística Actual}
+\section{Gibbs}
 Ya más adelante W. Gibbs (1839-1903) con su libro \textit{Elementary Principles of Statistica Mechanics} en 1901 ya propuso la forma actual de hacer física estadística. Él desarrola las ideas que se expusieron en los preliminares, las ideas de ensambles microcanónico y canónico fueron gracias a él. Aunque Gibbs volviera la mecánica estadística más moderna no le quitaba algunos problemas; es más puso en ella otro problema con su idea de ensambles.
+
+Para seguir la idea de Gibbs primero se supone que el sistema que se va a estudiar es uno compuesto de $N$ partículas, la suposición atomista de la materia. Gracias a la mecánica clásica se conocen las ecuaciones de movimiento para un sistema de varias partículas, las ecuaciones de Hamilton:
+\begin{equation} \label{Hamilton}
+\frac{dq_{i}}{dt}= \frac{\partial H}{\partial p_{i}} \quad , \quad \frac{d p_{i}}{dt} =-\frac{\partial H}{\partial q_{i}}.
+\end{equation}
+Donde el índice $i=1,...,3N$ y $H$ es el Hamiltoniano del sistema. Se podría pensar que el problema ya se encuentra solucionado pero hay dos dificultades; la cantidad de ecuaciones de movimiento son muchas pues existirán el mismo número de ecuaciones que grados de libertar, y en un volumen típico hay en el orden de $10^{23}$ partículas. En la actualidad, las herramientas que proporciona la computación podría ayuda a resolver estas ecuaciones, suponiendo cierta simplicidad en ellas. Pero aún así existe el problema de las condiciones iniciales del sistema, en la práctica es imposible de encontrar la posición y el momento de todas las partículas para el mismo tiempo esto es en el caso clásico \cite{LandauStat}, la mecánica cuántica impone restricciones aún mayores.
+\\
+Para poder superar este dilema se preve un enfoque estadístico, donde se ve que a mayor número de partículas empiezan a aparecer regularidades. Lo interesante de la mecánica estadística es que las leyes dadas solo funcionan cuando los grados de libertad son muchos.
+\\
+Sea un sistema mecánico macroscópico en un instante de tiempo $t$,  se dice que el microestado del sistema está dado por cada $q_{i}(t)$ y $p_{i}(t)$. El microestado se puede representar por un punto $\lambda(t)$ en un espacio  abstracto de $6N$ dimensiones, este espacio se llama el espacio de fase $\Gamma = \Pi^{3N}_{i} \{q_{i}, p_{i} \}$.
+Aquí es donde entra la idea del ensamble dada por Gibbs. Se supone $N$ copias de un sistema macroscópico, cada uno de ellos viene representado en el espacio de fase $\Gamma$ por un punto $\lambda(t)$. Nótese que esto no significa  que todos los puntos sean el mismo, un sistema macroscópico puede tener diferentes microestados, cada microestado puede cambiar por lo menos por un momento o una posición esto no afectaría a las propiedades macroscópicas que se miden y para términos prácticos sería el mismo sistema macroscópico \cite{KardarStat}.
+\\
+Sea $d\mathcal{N}(p,q,t)$ el número representativo de puntos en el volumen infinitesimal $d\Gamma = \Pi^{3N}_{i}dp_{i}dq_{i}$ alrededor del punto $(p,q)$. Entonces se define una densidad en el espacio de fase:
+\begin{equation}
+\rho(p,q,t)d\Gamma= \lim_{\mathcal{N} \to \infty} \frac{d\mathcal{N}(p,q,t)}{\mathcal{N}}.
+\end{equation}
+Es más conveniente escribir la evolución del sistema por esta densidad. Los promedios de ensamble se halla así:
+\begin{equation}
+\langle f \rangle = \int d\Gamma \rho(p,q,t) f(p,q).
+\end{equation}
 \\
 Los promedios se encuentran gracias a los ensambles de varias copias idénticas del sistema pero en microestados diferentes que son admisibles por los parámetros macroscópicos. Pero no significa que el sistema que se está estudiando este en todos esos estados es solo un método para poder lograr describir una densidad en el espacio de fase, que luego se usa para poder calcular propiedades del sistema.Entonces entra la pregunta de que tan posible es hablar de copias imaginarias del sistema, sabiendo que solo existe uno. 
 \\
+\subsection{Ensamble Canónico}
+Antes de entrar en el problema de ergodicidad se quiere ver cuál es el operador densidad de probabilidad para un sistema cerrado que puede intercambiar calor con su entorno. Para encontrar este operador se extremizará la entropía bajo dos restricciones \cite{ReichlStat}. La primera restricción es que el operador de densiada, $\rho$, esté normalizado.
+\begin{equation}
+\Tr(\rho)=1,
+\end{equation}
+además se impone la restricción de tener un valor de energía fijo,
+\begin{equation}
+\Tr(H \rho)= \langle E \rangle,
+\end{equation}
+donde H  es el operador Hamiltoniano del sistema. El porqué el promedio de energía se escribe así se tendrá claro más adelante. La entropía que se va a maximizar  será la entropía de Gibbs, de esta se hablará un poco más profundo en el siguiente capítulo, esta se escribe para un sistema cuántico
+\begin{equation}
+S=-k_{B} \Tr[\rho \ln (\rho)].
+\end{equation}
+Con ayuda de los multiplicadores de Lagrange, $\alpha$ y $\beta$, se encuentra la distribución de probabilidad que maximiza la entropía bajo las restricciones dadas. Entonces se tiene:
+\begin{align}
+\delta \{ \Tr [ \alpha \rho + \beta H \rho - k_{B} \rho \ln (\rho)] \} 
+&= \Tr \{ [(\alpha - k_{B})I + \beta H - k_{B} \ln (\rho) ] \delta \rho \}=0.
+\end{align}
+Donde I es el operador unitario. Como $\delta \rho$ es arbitrario, lo que está dentro de los corchetes cuadrados debe ser igual a 0. Organizando se llega al operador
+\begin{equation}
+\rho= \exp [ \bigg( \frac{ \alpha }{k_{B}}-1 \bigg) I + \frac{\beta}{k_{B}}H ].
+\end{equation}
+Por la condición de normalización que se tiene sobre el operador se encuentra
+\begin{equation}
+Z(\beta) \equiv \exp (1- \frac{ \alpha }{k_{B}}) = \Tr (e^{\frac{\beta H}{k_{B}}}).
+\end{equation}
+Aquí se ha definido la función de partición $Z(\beta)$ como la normalización del operador de densidad de probabilidad. Por medio de las restricciones se puede encontrar que el multiplicador $\beta$ es igual a $\frac{1}{T}$. Entonces se puede reescribir el operador de densidad  como
+\begin{equation}
+\rho = \frac{ e^{-\beta H}}{\Tr( e^{-\beta H})}.
+\end{equation}
+Históricamente se escogió la entropía de Gibbs porque da este resultado para un sistema a temperatura $T$.
+
+
 En el artículo hecho por E.T Jaynes \cite{JaynesEntropies} se habla de las propuestas dadas por Boltzmann y Gibbs para la entropía. En este artículo pone las diferencias entre cada pero muestra que la entropía dada por Gibbs es la correcta. Siguiendo la notación del artículo,$d\Gamma \equiv d^{3}x_{1}...d^{3}p_{N}$, $d\Gamma_{1} \equiv d^{3}x_{1}d^{3}p_{1}$, $d\Gamma_{-1} \equiv d^{3}x_{2}...d^{3}p_{N}$; se define un ensamble por su función de distribución de $N$ puntos representativos,
 \begin{equation}
 F_{N}(x_{1},x_{2},..,x_{N};p_{1},p_{2},...,p_{N};t),
@@ -117,6 +187,138 @@ Luego si tengo un sistema físico del que conozco solo su estado macroscópico, 
 \\
 También aunque esta idea se base en la teoría de la probabilidad también ha sido muy criticada en las matemáticas. Hay preguntas como: si se llegará a conocer un poco más del sistema, ¿ aún sería válida la distribución microcanónica?, ¿ si las probabilidades realmente tiene un peso que se les debería asignar?. En busca de evitar estas preguntas pero no volver a construir toda una teoría lo que se propone es intercambiar el principio de probabilidades iguales por una idea más estable que tenga las mismas implicaciones que ese principio y se vuelva a la mecánica estadística actual.
 \\
+
+\section{Teorma de Liouville }
+Este teorema es de alta importancia en la mecánica estadística, para ver sus consecuencias en esta área primero se verá qué declara este teorema. La siguiente demostración del teorema sigue los pasos dados por \cite{PathriaStat}. 
+
+Se considera un volumen $\Gamma$ que encierra una región que se quiere estudiar en el espacio de fase,  este volumen tiene una superficie $\sigma$. El cambio del número de puntos, microestados posibles del sistema, dentro de este volumen está dado por 
+\begin{equation}
+\frac{\partial}{\partial t} \int_{\Gamma} \rho d\Gamma
+\end{equation}
+
+donde $\rho$ es es la densidad en el espacio de fase definida anteriormente. En la ecuación anterior $d^{3N}q d^{3N}p=d\Gamma$. 
+El cambio neto de puntos que salen de $\Gamma$ por la superficie $\sigma$ es
+
+\begin{equation}
+\int_{\sigma} \rho \mathbf{v \cdot \hat{n}} d\sigma;
+\end{equation}
+
+donde $\mathbf{v}$ es el vector de velocidad del punto representativo en la región de superficie $d\sigma$. $\mathbf{\hat{n}}$ es el vector perpendicular a esta superficie con dirección de salida. Por el teorema de la divergencia se tiene:
+
+\begin{equation}
+\int_{\Gamma} \div{ ( \rho\mathbf{v} ) } d\Gamma = \int_{\Gamma} \sum_{i=1}^{3N} \Big( \frac{\partial}{\partial q_{i}}(\rho \dot{q_{i}})+ \frac{\partial}{\partial p_{i}} (\rho \dot{p_{i}}) \Big) d\Gamma
+\end{equation}
+Debido a que las cantidad de puntos se conserva en el espacio de fase esto quiere decir que el ensamble que se considera no agrega nuevos miembros ni elimina los que ya se encuentran en este, esto permite concluir:
+\begin{equation}
+ \int_{\Gamma} \Big( \frac{\partial \rho}{\partial t} + \div{ ( \rho\mathbf{v} ) } \Big) d\Gamma =0.
+\end{equation}
+La condición para que esta integral sea cierta para cualquier $\Gamma$ es que el integrando sea cero. Esto nos da la ecuación de continuidad para el espacio de fase,
+
+\begin{equation} \label{con}
+ \frac{\partial \rho}{\partial t} + \div{ ( \rho\mathbf{v} ) }=0
+\end{equation}
+
+usando la forma explícita de la divergencia,
+\begin{equation}
+ \frac{\partial \rho}{\partial t} +\sum_{i=1}^{3N} \Big( \frac{\partial\rho}{\partial q_{i}}\dot{q_{i}}+  \frac{\partial\rho}{\partial p_{i}}\dot{p_{i}} \Big) + \rho \sum_{i=1}^{3N} \Big( \frac{\partial \dot{q_{i}}}{\partial q_{i}} + \frac{\partial \dot{p_{i}}}{\partial p_{i}}\Big)=0.
+\end{equation}
+Por las ecuaciones de Hamilton \ref{Hamilton} el último término se cancela. Como $\rho$ depende de $p,q$ y $t$ con los dos primeros términos se pueden organizar para que la ecuación quede de la siguiente forma:
+\begin{equation} \label{liouville}
+\frac{d \rho}{dt}= \frac{\partial \rho}{\partial t} + [ \rho, H ]=0.
+\end{equation}
+La ecuación \ref{liouville} es el teorema de Liouville. Esto lo que dice es que la densidad "local" de puntos vista desde un observador que se mueve con el punto, se mantiene constante en el tiempo. Luego los puntos en el espacio de fase se mueven de la misma manera que un fluido incompresible en el espacio físico.
+
+Esta conclusión es la más clara al obtener el teorema de Liouville pero también hay consecuencias profundas dadas por este. Para ver las consecuencias que brinda el teorema seguiremos a \cite{KardarStat}.
+
+\subsection{Consecuencias del Teorema de Liouville}
+La primera consecuencia es que al hacer una inversión temporal el corchete de poisson $[\rho, H]$ cambia de signo y esto predice que la densidad revierte su evolución. Es decir que al hacer la transformación $(p,q,t) \to (p,q,-t)$ el teorema de Liouvile implica $\rho(p,q,t)=\rho(-p,q,-t)$.
+La segunda es sobre la evolución del promedio de ensamble en el tiempo.
+\begin{equation}
+\frac{d \langle f \rangle}{dt}= \int d \Gamma \frac{\partial \rho(p,q,t)}{\partial t} f(p,q)= \sum_{i=1}^{3N} \int d\Gamma f(p,q) \Big( \frac{\partial \rho}{\partial p_{i}}\frac{\partial H}{\partial q_{i}} - \frac{\partial \rho}{\partial q_{i}}\frac{\partial H}{\partial p_{i}}  \Big)
+\end{equation}
+En la ecuación anterior se usó el teorema de Liouville poniendo explícitamente el corchete de Poisson. Integrando por partes y recordando que $\rho$ tiende a cero en los límites de la integración se llega a:
+\begin{equation}
+\frac{d \langle f \rangle}{dt}= \langle [f,H] \rangle.
+\end{equation}
+Con esta relación sobre los promedios se puede ver qué condiciones son necesarias para que el ensamble se encuentre en el estado de equilibrio. Dados unos parámetros macroscópicos se sabe que si el ensamble corresponde a uno en el equilibrio los promedios de ensamble deben ser independientes del tiempo. Esto puede lograrse por
+ 
+\begin{equation}
+[\rho_{eq}, H]=0.
+\end{equation}
+Una posible solución a la ecuación anterior es que $\rho_{eq}(p,q)=\rho(H(p,q))$ esto es una solución ya que $[\rho(H),H]=\rho^{'}(H)[H,H]=0$. Esto muestra el supuesto básico de la mecánica estadística, $\rho$ es constante en las superficie de energías constantes $H$. El supuesto de la mecánica estadística dictamina que el macroestado esta dado por una densidad uniforme de microestados. Esto es el principio de probabilidades iguales  a priori.
+\\
+La consecuencia anterior respondería la pregunta de cómo definir equilibrio para partículas en movimiento. Pero para saber si todos los sistemas evolucionan naturalmente al equilibrio  y justificar el supuesto básico de la mecánica estadística se debe mostrar que densidades no estacionarias se van acercando a densidades estacionarias $\rho_{eq}$. Pero esto entra en un problema con la primera consecuencia (inversión temporal), dado una densidad $\rho(t)$ que se acerque a $\rho_{eq}$ habrá otra dada la inversión temporal que se estará alejando de esta densidad de equilibrio. Lo que se ha propuesto normalmente es mostrar que $\rho(t)$ se encontrará en el intervalo cercano a $\rho_{eq}$ una gran parte del tiempo, esto significa que los promedios temporales están dominados por la solución estacionaria. Estos nos lleva al problema de ergodicidad, ¿ es válido igualar el promedio temporal con el promedio de ensamble?. 
+\\
+
+\section{Ergodicidad}
+En esta sección se hablará un poco sobre el problema de ergodicidad siguiendo a \cite{TodaStat}, se planteará las dificultades y se verán algunas soluciones que se han dado para este problema. Se habla de este problema ya que es fundamental la hipótesis de ergodicidad para la mecánica estadística, además la nueva perspectiva que se mostrará en los siguientes capítulos \cite{Popescu2006}, no hace énfasis en esta hipótesis es más ni siquiera llega a ser una pregunta que necesite ser resuelta. Para ver por qué facilita tanto evitar esta hipótesis se dará esta sección.
+\\
+La mecánica estadística tiene como base el principio de probabilidades iguales generalmente en la literatura siempre se empieza hablando de cómo se acepta el principio desde la teoría de la probabilidad. Pero hay un concepto que no es profundizado en general por los textos usados regularmente; el porqué se debe introducir la probabilidad en estos casos.\\
+Libros como \cite{HuangStat},\cite{LandauStat} empiezan explicando cómo se manejaría un problema de muchas partículas desde la forma clásica. La idea que muestra es la forma habitual de introducir la mecánica estadística, se presenta que describir avogadro número de partículas es complicado aunque se  tenga las ecuaciones y se pueda de alguna forma (numérica o computacional) de resolver todas las ecuaciones que salen. Entonces se sigue explicando que para resolver el problema se tiene en cuenta que la complejidad de las	 interacciones que hay entre el sistema y el ambiente, hace que el sistema se encuentre en muchos estados varias veces. Esto otorga un comportamiento probabilístico al sistema que puede llegar a comportarse como uno aislado.
+\\ 
+Estos argumentos introducen las probabilidades al sistema mecánico sin tener que entrar en un conflicto con la mecánica clásica, nótese que luego de dada esa explicación siguen a formalizar lo dicho y construye la mecánica estadística que se conoce. Pero hay otra forma de introducir las probabilidades a estos sistemas de muchos grados de libertad y es por hipótesis, el libro \cite{KhinchinStat} sigue esta filosofía. Aunque hayan dos formas de establecer las probabilidades de igual forma se llega al problema de ergodicidad. 
+\\
+La hipótesis de ergodicidad afirma que el promedio temporal de una cantidad mecánica en un sistema aislado es igual al promedio de ensamble. Dada una teoría que explique algún fenómeno que nos interese se querrá probar que tan buenos resultados se obtienen de ella. Para esto se comparará con el experimento pero las cantidades físicas en una teoría aparecen como funciones de las variables dinámicas. Pero ya se ve un problema claro en este procedimiento cómo se puede comprar los datos medidos en el laboratorio con las funciones de la teoría; las funciones de las variables dinámicas toman valores diferentes para varios estados del sistema pero para poder comparar los resultados experimentales se debería saber cuál es el estado del sistema o sea dar todas las variables dinámicas para poder estar seguros que se está comparando los datos con el estado específico, pero como ya se ha dicho esto es imposible.
+\\
+Pero hay un detalle en este caso y es que al medir una cantidad física esta no se observa de manera instantánea, se demora algún tiempo $\tau$ para poder observarla. En el caso de una cantidad termodinámica, el tiempo en que se demora midiendo va desde $\tau_{0}$, que es el tiempo necesario para que no hayan correlaciones del movimiento molecular, y  $\tau_{m}$ que es el tiempo máximo en el que la propiedad macroscópica que se mide no cambia. Con la temperatura al medirla se necesita esperar un tiempo $\tau_{0}$ para que se estabilice el sistema y el termómetro, y la medición se puede tomar hasta $\tau_{m}$ cuando el sistema se vuelva a perturbar. Cualquier cantidad que se mida durante este intervalo se supone que no debe depender de $\tau$ en algunos sistemas que llegan al equilibrio $\tau_{m}$ puede extenderse al infinito.
+\\
+Entonces con lo dicho anteriormente se puede proponer la siguiente idea de medición. Sea $P$ un punto en el espacio de fase, y sea $f(P,t)$ una función sobre el espacio de fase, si esta función corresponde a una cantidad termodinámica no debe depender de su estado inicial $P$. Porque sistemas termodinámicos con cantidades termodinámicas iguales se pueden encontrar en estados dinámicos diferentes. \\
+La relación de esta función con los parámetros está dada por un promedio en este caso el promedio temporal luego:
+\begin{equation}
+\overline{f_{\tau}}(P)= \frac{1}{\tau} \int_{0}^{\tau} f(P,t) dt
+\end{equation}
+ 
+si se está en el equilibrio
+
+\begin{equation}
+\overline{f}(P)= \lim_{\tau \to \infty} \frac{1}{\tau} \int_{0}^{\tau} f(P,t) dt.
+\end{equation}
+\\
+Para poder mantener consistencia con la termodinámica los promedios $\overline{f_{\tau}}(P)$ y  $\overline{f}(P)$ deben ser independientes de $\tau$. Además en el equilibrio los dos promedio deben ser iguales, esto es para $\tau_{m}$ muy grande. \\
+El promedio de ensamble está definido así:
+
+\begin{equation}
+\langle f \rangle = \frac{1}{\Omega} \int_{\Gamma} f(P,t) d\Gamma \quad ; \quad \Omega= \int_{\Gamma} d\Gamma,
+\end{equation}
+la integral es sobre el espacio accesible en el espacio de fase, $d\Gamma$ es el elemento de volumen. Como el punto $P$ evoluciona gracias a las ecuaciones de Hamilton se preserva la medida por el teorema de Liouville, luego $\langle f \rangle$ no depende del tiempo. Entonces 
+\begin{equation}
+\langle f \rangle =  \overline{\langle f \rangle}.
+\end{equation}
+Como el promedio temporal conmuta con el promedio de ensamble, hay casos especiales en los que no ocurre esto. Entonces
+\begin{equation}
+\overline{\langle f \rangle} = \langle \overline{f} \rangle.
+\end{equation}
+Como $\overline{f}$ es independiente de $P$ y constante sobre  todo el espacio de fase, entonces $\langle \overline{f} \rangle= \overline{f}$ por lo tanto
+\begin{equation} \label{ergodicidad}
+\langle f \rangle = \overline{f}.
+\end{equation}
+Aquí se ha mostrado por qué es válido el uso del promedio de ensamble en vez del temporal. Para esta demostración se ha usado dos suposiciones. Primero que  $\overline{f}(P)$ tiene el mismo valor para cualquier $P$ en la misma trayectoria que este punto traza, lo que llama \cite{Ehrenfest} el G-Path. Birkhoff demostró esta aseveración \cite{Birkhoff}. El problema es saber si $\overline{f}(P)$  tiene un valor definido independiente de la condición inicial $P$ y si esto se satisface para $P$ en cualquier G-path. \\
+Boltzmann propuso que para satisfacer la igualdad \ref{ergodicidad}, el G-path debe pasar por todos los puntos de la superficie de energía. Como la trayectoria del punto pasa por todos los puntos dado suficiente tiempo, el promedio temporal es igual al promedio de ensamble. Esto es lo que Boltzmann llamó la hipótesis de ergodicidad, esta idea sobre la trayectoria del punto $P$ es llamado la condición de ergodicidad en el sentido de Boltzmann.
+\\ 
+Como la trayectoria dinámica es un conjunto unidimensinal de puntos continuos y nunca se intersecta así misma en un superficia multidimensional constante de energía, hace imposible una correspondencia uno a uno de un espacio de dimensión dos o mayor a un espacio unidimensional, luego la ergodicidad en el sentido de Boltzmann no puede concebirse. Ergodicidad, la igualdad \ref{ergodicidad}, no siempre implica ergodicidad en el sentido de Boltzmann.
+\\
+\\
+Aunque la hipótesis ergodica se encuentre en un punto importante en la construcción de la física estadística, hay sistemas que no son ergodicos pero aún así se pueden tratar con la mecánica estadística. El calor específico de los sólidos pueden ser modelado de manera correcta bajo el supuesto de una red de partículas cuánticas vibrando en una aproximación armónica.  El tratamiento clásico también es satisfactoria para temperaturas altas. Como se sabe, cualquier modo normal en vibraciones armónicas es independiente de los otros modos normales y la energía de cada modo es constante. Para describir el calor específico se puede hacer por medio de la aproximación armónica pero si existen terminos no lineales pequeños o anarmónicos habrá una intercambio de energía entre los modos normales. Existe un problema famoso que E. Fermi, J. Pasta y S. Ulam investigaron \cite{FermiPastaUlam}, un sistema de una cadena lineal de $N+1$ partículas idénticas de masa $m$ conectadas por resortes idénticos. Pero en  este caso ellos incluyeron interacciones no lineares al Hamiltoniano de este sistema, que puede ser escrito 
+\begin{equation}
+H= \sum_{k} \frac{1}{2m} p_{k}^{2} +\frac{\kappa}{2}\sum_{k} (q_{k+1}-q_{k})^{2}+\frac{\lambda}{s}\sum_{s} (q_{k+1}-q_{k})^{s},
+\end{equation}
+donde $\lambda$ es la constante de acoplamiento y $s=3,4$, esto representa los potenciales no lineales cúbicos y cuadráticos. Ellos querían mostrar la intuición que cualquier interacción no lineal entre partículas de un sistema generaría un comportamiento ergodico  o irreversible para el sistema. Las ecuaciones de movimiento del sistema son
+\begin{equation}
+m \ddot{q}_{k}= \kappa (q_{k+1}-2q_{k}+q_{k-1})+ \lambda[(q_{k+1}-q_{k})^{s-1}-(q_{k}-q_{k-1})^{s-1}],
+\end{equation} 
+o transformando a coordenadas normales: $q_{k}=(\frac{2}{N})^{\frac{1}{2}} \sum_{j=1}^{N-1}x_{j} \sin (\frac{jk \pi }{N})$, $m\dot{x}_{j}=y_{j}$ la ecuación queda como
+\begin{equation}
+\ddot{x}_{j}= - \omega_{j}^{2} x_{j} +\lambda F_{j}(x),
+\end{equation}
+con $\omega_{j} =2(\frac{\kappa }{m})^{\frac{1}{2}} \sin (\frac{j \pi}{2N})$. Donde $F_{j}(x)$ son las fuerzas no lineales. El sistema que ellos estudiaron fue de $N=32$  y $N=64$ mirando su evolución luego de un largo tiempo. Las fuerzas que usaron fueron cuadráticas, cúbicas y lineales. Además la energía de los modos está dada por 
+\begin{equation}
+E_{k} = \frac{1}{2} m(\dot{x}^{2}_{k}+ \omega_{k}^{2}x_{k}^{2}).
+\end{equation}
+Simularon cómo las energías cambiaban en el tiempo cuando inicialmente se le da al menor modo una cantidad de energía. Se esperaba que la energía dada al menor modo fuese siendo distribuida paulatinamente a los demás modos y al final se tuviese una cantidad de energía igualmente distribuida en cada modo. Pero este no fue el hallazgo, para $N=32$ con un potencial cúbico y con las constantes $\kappa=m=1$ y $\lambda=1/4$. Las condiciones iniciales eran: las velocidades iguales a 0 y los desplazamientos dados por la curva sinusoidal del menor modo normal. Lo que se vio fue que la energía regresa al primer modo de manera periódica, la energía es intercambiada en los modos más bajos pero no mucho en los modos más grandes. Se llega a la conclusión que el sistema regresa de forma casi exacta a su estado inicial. \\
+Entonces la presencia de anarmonicidad no implica ergodicidad para este sistema. Esto es un ejemplo de un sistema que no es ergódico, esto deja mucha desconformidad dado que no se llega ver porqué la hipótesis que se usar para formar la mecánica estadística no se cumple para sistemas que comúnmente  son usados en la física y son utilizados de manera frecuente. Este descontento es una de las partes que no deja al marco teórico de la física estadística muy estable en comparación con otras ramas de la física.
+
+
+\section{Jaynes}
 Este problema ha llamado la atención de varias personas y han existido muchos intentos para poder resolver estos problemas. Se ha intentado basar la mecánica estadística en otras ideas. E.T Jaynes propone una relación entre la mecánica estadística y la teoría clásica de la información \cite{JaynesI},\cite{JaynesII}. 
 \\
 Jaynes impulsado por la falta de un argumento que conecte los fenómenos microscópicos y los macroscópicos. Procede a estipular que para tener una mecánica estadística libre de objeciones esta debería seguir los siguientes requerimientos: libre de incongruencias matemáticas, no debería tener suposiciones externas arbitrarias y debería ser capaz de describir procesos tanto fuera del equilibrio como en equilibrio. 
