--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -1,5 +1,152 @@
 \chapter{El Entrelazamiento y La Mecánica Estadística} \label{cap:2}
 
+\section{Herramientas de la Teoría Cuántica}
+La mecánica cuántica en general se introduce desde la perspectiva del vector de estado, sus aplicaciones abarcan una gran cantidad de problemas. Sus herramientas son poderosas para algunos problemas, pero no siempre es sencillo poder seguir con este formalismo en casos particulares. Por esto se usa el formalismo de la matriz densidad u operador densidad cuando se habla de un sistema compuesto por un subsistema y su ambiente. Debido al entrelazamiento que existe ente el subsistema y su ambiente no se puede especificar un estado individual para el subsistema, las herramientas proporcionadas por el operador densidad permite representar las estadísticas de las medidas de uno de los componentes del sistema \cite{Decoherence}.
+\\
+\subsection{Operador de Densidad}
+Como se sabe cuánticamente el estado $\ket{\psi}$ da toda la información posible de un sistema, a esto se le llama un estado puro. Para especificar cuál es el operador densidad de un sistema se supone que el sistema cuántico puede estar en $\ket{\psi_{i}}$ para $i=1,2,...$. Cada estado posible del sistema tiene una probabilidad correspondiente, $p_{i}>0$ y $\sum_{i} p_{i}$. Luego el operador densidad para el sistema es :
+\begin{equation}
+\rho \equiv \sum_{i} p_{i} \ket{\psi_{i}}\bra{\psi_{i}}.
+\end{equation}
+En el caso en que solo haya un estado posible, se tiene el operador densidad para un estado puro $\rho= \ket{\psi}\bra{\psi}$. Entonces se puede hablar de un ensamble de estados puros $ \{ p_{i} | \ket{\psi_{i}} \} $  siendo, el operador densidad, la distribución clásica de probabilidad de matrices de estados puros. Nótese que se puede usar de manera similar el nombre de operador densidad y de matriz densidad, esta es la usanza de la literatura. 
+\\
+El operador densidad también puede ser especificado por las siguientes propiedades: 
+
+\begin{enumerate}
+\item $\rho$ tiene traza igual a uno, $\Tr(\rho)=1$.
+
+\item $\rho$ es un operador positivo, $\ket{\phi}$ es un vector arbitrario luego $\bra{\psi}\rho\ket{\psi} \geq 0$.
+\end{enumerate}
+Ya con esta breve introducción se pueden reescribir los postulados de la mecánica cuántica en este formalismo, siguiendo a \cite{NielsenInformation}:
+\\
+\textbf{Postulado 1}: Se puede asociar a un sistema físico aislado un espacio de Hilbert. El sistema está descrito completamente por el operador densidad que actúa sobre el espacio de Hilbert del sistema. Si un sistema cuántico está en el estado $\rho_{i}$ con probabilidad $p_{i}$, el operador de densidad del sistema es $\sum_{i} p_{i} \rho_{i}$.
+\\
+
+\textbf{Postulado 2}: La evolución de un sistema cuántico cerrado está descrita por una transformación unitaria. Esto es,  el estado $\rho$ del sistema en el tiempo $t_{0}$ está relacionado con el estado $\rho'$ del sistema para el tiempo $t$ por un operador unitario $U$ el cual depende solo de los tiempos $t_{0}$ y $t$. 
+\begin{equation}
+\rho' = U \rho U^{\dagger}.
+\end{equation}
+\\
+
+\textbf{Postulado 3}: Las medidas cuánticas están descritas por un conjunto de operadores $ \{  M_{m} \}$. Esto operadores actúan en el espacio de Hilbert del sistema. El índice $m$ habla de los posibles resultados de una medida al hacer el experimento. Si se tiene el estado del sistema $\rho$ inmediatamente antes de la medida la probabilidad que el resultado $m$ ocurra es:
+\begin{equation}
+p(m)= \Tr (M^{\dagger}_{m}M_{m} \rho),
+\end{equation}
+y el estado del sistema luego de una medición es
+\begin{equation}
+\frac{M_{m} \rho M_{m}^{\dagger}}{\Tr(M^{\dagger}_{m}M_{m} \rho)}.
+\end{equation}
+Los operados $\{  M_{m} \}$ satisfacen,
+\begin{equation}
+\sum_{m} M^{\dagger}_{m}M_{m} = I.
+\end{equation}
+\textbf{Postulado 4}: El espacio de un sistema físico compuesto es el producto tensorial de cada espacio de los componentes del sistema. Si  hay $N$ sistemas y cada sistema es preparado en el estado $\rho_{i}$, con el índice recorriendo cada sistema, el sistema total está representado por $\rho_{1} \otimes \rho_{2} \otimes ...\otimes \rho_{n}$.
+\\
+\\
+Estos son los postulados de la mecánica cuántica desde la perspectiva del operado densidad, estos postulados son análogos a la perspectiva del vector de estado. Pero se debe ver un poco más en detalle el postulado 3, este habla sobre las mediciones cuánticas pero con mayor generalidad. Habitualmente al introducir la mecánica cuántica solo se habla de medidas proyectivas, estas medidas tienen muchas restricciones y no abarcan todas las posibilidades de medición.
+\\	
+Se puede demostrar que las mediciones proyectivas junto con los demás axiomas de la cuántica son semejantes a las medidas generales \cite{NielsenInformation}, entonces si existe una equivalencia entre estos dos tipos de mediciones, ¿  por qué preocuparse por un esquema más general?. Porque las mediciones generales no tienen tantas restricciones como las medidas proyectivas, esto da una variedad de propiedades que las medidas proyectivas no tienen. Además en algunos problemas que conciernen a la teoría cuántica de la información, es necesario usar mediciones generales, como por ejemplo la manera óptima de distinguir entre un conjunto de estados cuánticos.
+\\
+Pero hay una ventaja que tienen  la mediciones generales sobre las proyectivas, es lo que se nombra como \textit{repetibilidad}. Las medidas proyectivas tienen repetibilidad, puesto que si se tiene un estado inicial $\ket{\psi}$. Al hacer la primera medida se encuentra que $\ket{\psi_{m}}=\frac{P_{m}\ket{\psi}}{\sqrt{\bra{\psi}P_{m}\ket{\psi}}}$. Operando otra vez a $\ket{\psi_{m}}$ con $P_{m}$, el estado no cambia entonces $\bra{\psi_{m}}P_{m}\ket{\psi_{m}}=1$, esto significa que si se repite la medición muchas veces se seguirá en el mismo estado \cite{VedralInformation}. Pero esto no es cierto para todos los experimentos. Si se está haciendo el experimento de la doble rendija y se quiere saber la posición de un fotón luego de pasar y eso se hace por medio de una placa, después de encontrar la posición del fotón no se puede volver a hacer una medición  sobre ese fotón. Entonces por esto se debe recurrir en ciertos casos a las mediciones generales. De esta mediciones generales hay un caso particular que es usado en la teoría cuántica de la información, este caso se llama medidas POVM (Positive Operator-Valued Measure). Estas medidas sirven cuando solo se quiere saber las probabilidades de que un resultado salga sin darle importancia a cuál sea el estado del sistema después de la medida \cite{NielsenInformation}.
+Por el postulado 3 se sabe que la probabilidad de que el resultado m salga viene dado por $p(m)= \Tr (M^{\dagger}_{m}M_{m} \rho)$. Si se define :
+\begin{equation}
+E_{m} \equiv M^{\dagger}_{m}M_{m}.
+\end{equation}
+Se puede demostrar fácilmente que $E_{m}$ es un operador positivo y cumple con $\sum_{m} E_{m}=I$. El conjunto completo de $ \{ E_{m}\}$ se conoce como POVM, y cada $E_{m}$ es un elemento asociado a POVM. Las mediciones proyectivas hacen parte de POVM, sea $P_{m}$ un proyector tal que $P_{m}P_{n}= \delta_{mn}P_{m}$ y $\sum_{m}P_{m}=I$. Solo para este caso los elementos POVM son los mismos que los operadores de medición, ya que $E_{m}=P_{m}^{\dagger}P_{m}=P_{m}$.
+
+\subsection{Operador de Densidad Reducido}
+
+Ahora se puede plantear la siguiente situación: se tiene un sistema $A$ que está correlacionado cuánticamente  con el sistema $B$. Esto quiere decir que el sistema completo $AB$ puede estar dado por un estado puro pero aún así no se puede describir individualmente el sistema $A$, entonces si solo se tiene acceso al sistema $A$ pero no al $B$, cómo se puede modelar matemáticamente toda la información que es posible de extraer solo de mediciones locales en $A$. Aquí se usa el operador densidad reducido, este se define así
+\begin{equation}
+\rho_{A} \equiv \Tr_{B}(\rho_{AB}).
+\end{equation}
+La traza es tomada únicamente en una base del espacio de Hilbert $\mathcal{H}_{B}$ del sistema $B$. Esta operación puede ser interpretada como si se estuviese promediando sobre todos los grados de libertad del sistema que no se tiene acceso, esta operación se le llama la traza parcial sobre $B$. Para ver la utilidad que tiene este operador se verá un ejemplo sencillo, este ejemplo se puede generalizar fácilmente.
+Se tiene el estado de algún sistema compuesto por $A$ y $B$ dado por la función de onda $\Phi$:
+\begin{equation}
+\Phi = \frac{1}{\sqrt{2}} (\ket{a_{1}}\ket{b_{1}}+\ket{a_{2}}\ket{b_{2}}),
+\end{equation}
+este es un típico ejemplo de una función de onda donde los subsistemas $A$ y $B$ están entrelazados \cite{SusskindQuantum}. Los estados $\ket{a_{1}}$, $\ket{b_{1}}$,$\ket{a_{2}}$, $\ket{b_{2}}$ no son necesariamente ortogonales. La matriz de densidad es claramente:
+\begin{equation}
+\ket{\Phi}\bra{\Phi} = \frac{1}{2}\sum_{ij=1}^{2} \ket{a_{i}}\bra{a_{j}} \ket{b_{i}}\bra{b_{j}} .
+\end{equation}
+Sea $ \{ \ket{\psi_{k}} \} $ una base ortonormal en $\mathcal{H}_{A}$ y  $ \{ \ket{\phi_{l}} \} $ una base ortonormal en $\mathcal{H}_{B}$. Considerando mediciones que solo afecten al sistema $A$ se puede representar esta acción como $M=M_{A} \otimes I_{B}$, donde $I_{B}$ es el operador identidad en el espacio de Hilbert de $B$. Siguiendo la idea de responder si se puede extraer información del sistema solo conociendo las mediciones locales en $A$, entonces se hace el siguiente razonamiento:
+\begin{align}
+\langle M \rangle &=  \Tr(\rho M)\\
+\quad &=\sum_{kl} \bra{\phi_{l}}\bra{\psi_{k}}\rho(M_{A} \otimes I_{B})\ket{\psi_{k}} \ket{\phi_{l}}\\
+\quad &=\sum_{k}\bra{\psi_{k}}  \Bigg( \sum_{l=1} \bra{\phi_{l}} \rho\ket{\phi_{l}} \Bigg) M_{A}\ket{\psi_{k}}\\
+\quad &=\sum_{k}\bra{\psi_{k}} ( \Tr_{B}(\rho) )  M_{A}\ket{\psi_{k}}\\
+\quad &=\sum_{k}\bra{\psi_{k}} \rho_{A}  M_{A}\ket{\psi_{k}}\\
+\quad &= \Tr_{A} (\rho_{A} M_{A}).
+\end{align}
+Aquí $\rho_{A}$ es la matriz reducida definida al inicio de esta subsección. El ejemplo se puede expandir para sistemas con $N$ subsistemas entrelazados. Se tiene ahora $N$ componentes del sistema y solo se puede hacer mediciones en el componente $i$. El operador que describe estas mediciones sería $M= I_{1}\otimes I_{2} ... \otimes I_{i-1} \otimes M_{i} \otimes I_{i+1}\otimes .... \otimes I_{N}$. Ahora la matriz de densidad reducida para el sistema $i$ es
+\begin{equation}
+\rho_{i}= \Tr_{1,...,i-1,i+1,...,N}(\rho).
+\end{equation}
+Con esto y siguiendo el ejemplo anterior se puede demostrar que  \cite{Decoherence}
+\begin{equation}
+\langle M \rangle = \Tr(\rho M)=\Tr_{i}(\rho_{i} M_{i}).
+\end{equation}
+Entonces si se conoce el estado del sistema total y solo se puede hacer mediciones en un subsistema aún así gracias al formalismo del operador densidad se puede encontrar las estadísticas de las mediciones. Es importante aclarar que aunque se tenga un operador de densidad reducido para el sistema $A$ no significa que se haya descrito el sistema de manera individual. Esto es solo una herramienta matemática para poder sacar las estadísticas de las mediciones.
+\subsection{Distancia de Traza}
+Las herramientas hasta ahora mostradas han sido impulsadas por una pregunta que se necesitaba responder pero que tenía una respuesta única. Ahora se encuentra con la pregunta ¿ qué tan cercanos están dos estado cuánticos?. La respuesta a esta pregunta puede ser dada por varias definiciones de distancias pero la que se usará acá será la distancia de traza.
+\\
+Una pregunta relacionada con la cercanía de los estados cuánticos es la de ¿ qué quiere decir que dos informaciones sean similares?. En la teoría clásica de la información esto recae en poder diferenciar dos distribuciones de probabilidad. Pero como ya se había advertido esta respuesta no es única, existen diferentes medidas como la fidelidad o la distancia de Kullback–Leibler. Dependiendo del fin es deseable una a las otras.
+\\
+Se tienen dos distribuciones de probabilidad $\{ p_{x} \}$ y $\{ q_{x} \}$. La distancia de  traza clásica viene dada por:
+\begin{equation}
+D(p_{x},q_{x})\equiv \frac{1}{2} \sum_{x}|p_{x}-q_{x}|.
+\end{equation}
+También se conoce como la distancia $L_{1}$ o la distancia de Kolmogorov. Esta distancia también se puede escribir de la siguiente manera 
+\begin{equation}
+D(p_{x},q_{x})= \max_{S} \big| p(S)-q(S) \big| = \max_{S} \Bigg| \sum_{x \in S}p_{x}-\sum_{x \in S}q_{x} \Bigg|.
+\end{equation}
+Donde la maximización es sobre todos los subconjuntos $S$ de los indices $\{ x \}$ \cite{NielsenInformation}. Aunque estas igualdades puedan ser complicadas para hacer cálculos se conseguir una intuición de estas ecuaciones. Entonces la distancia de traza es la maximización  de las diferencias entre la probabilidad que el evento $S$ ocurra de acuerdo a la distribución $\{p_{x} \}$ y la probabilidad que el evento $S$ ocurra de acuerdo a la distribución $\{q_{x} \}$. El evento $S$ se podría decir que es el evento óptimo para examinar las diferencias entre $\{p_{x} \}$ y $\{q_{x} \}$.
+\\
+Pasando a un contexto cuántico la distancia de traza entre dos estados cuánticos $\rho$ y $\sigma$ es,
+\begin{equation}
+D(\rho,\sigma) \equiv \frac{1}{2} \Tr |\rho-\sigma|.	
+\end{equation}
+
+donde $|M| \equiv \sqrt{M^{\dagger}M}$ con la raíz positiva. Esta definición generaliza la distancia de traza clásica, si $\rho$ y $\sigma$ conmutan son diagonales en una misma base luego
+\begin{align*}
+D(\rho,\sigma) &= \frac{1}{2} \Tr |\sum_{i} (r_{i}-s_{i})\ket{i}\bra{i}|\\
+\quad &= D(r_{i},s_{i}).
+\end{align*}
+donde $r_{i}$ y $s_{i}$ son los elementos diagonales de $\rho$ y $\sigma$ respectivamente. Al igual que con la distancia de traza clásica se le puede dar un sentido más físico a esta definición. El siguiente teorema construirá la conexión \cite{NielsenInformation}.
+\begin{theorem}
+Sea $\{ E_{m}\}$ un POVM, con  $p_{m} \equiv \Tr(\rho E_{m})$  y  $q_{m}\equiv \Tr(\sigma E_{m})$ como las probabilidades de obtener un resultado de una medida $m$. Luego
+
+\begin{equation}
+D(\rho,\sigma)= \max_{ \{ E_{m}\} } D(p_{m},q_{m}),
+\end{equation}
+donde la maximización es sobre todos los POVMs $\{ E_{m}\}$.
+\end{theorem}
+
+\begin{proof}
+
+Véase que 
+
+\begin{equation}
+D(p_{m},q_{m})= \frac{1}{2} \sum_{m} \Big|\Tr(E_{m}(\rho- \sigma)) \Big|.
+\end{equation}
+Usando la descomposición espectral se tiene que $\rho- \sigma=Q-S$, donde $Q$ y $S$ son operadores positivos con soporte ortogonal. Luego $|\rho - \sigma|= Q+S$, y
+\begin{align}
+\big|\Tr(E_{m}(\rho- \sigma)) \big| &= \big|\Tr(E_{m}(Q-S)) \big| \\
+\quad &\leq \Tr(E_{m}(Q+S))\\
+\quad &\leq \Tr(E_{m}|\rho -\sigma|).
+\end{align}
+Luego 
+
+\begin{align}
+D(p_{m},q_{m}) &\leq \frac{1}{2} \sum_{m} \Tr(E_{m}|\rho-\sigma|)\\
+\quad &= \frac{1}{2} \Tr(|\rho -\sigma|)\\
+\quad &= D(\rho,\sigma),
+\end{align}
+se usó la relación de completitud de los elementos de POVM. Por otro lado si se escogen medidas donde los elementos POVM incluyen proyectores sobre el soporte de $Q$ y $S$, se ve que existen mediciones que dan distribuciones de probabilidad tales que $D(p_{m},q_{m})= D(\rho,\sigma)$.
+
+\end{proof}
+
+Entonces se puede decir que si dos operadores de densidad son cercanos, según la distancia de traza, cualquier medición hecha en este estado cuántico dará una distribución de probabilidad la cual estará cercana, en el sentido clásico de la distancia de traza. También se puede ver como el límite superior a la distancia de traza entre las distribuciones de probabilidad que se encuentran al medir esos estados cuánticos.
 
 
 La mecánica clásica nos habla de un sistema físico definido que para todos los tiempos está especificado. Este sistema evolucionan de manera determinista dadas las ecuaciones de movimiento. Pero lo que sorprende al tratar con  sistemas termodinámicos es que aunque se hable de un sistema clásico este puede mostrar propiedades que dependan de promedios estadísticos \cite{CallenThermo}. La conexión que hay entre el determinismo y estas probabilidades es una discusión que no se ha podido solucionar dado a que han existido varias soluciones pero todas con sus fallas . Los métodos típicos requieren hablar de promedios de ensamble, promedios temporales, aleatoriedad. Todos estos conceptos siguen siendo muy debatidos y parecería que no solucionará ninguna pregunta seguir con ellos \cite{TodaStat}. Por eso se ha estado buscando nuevos fundamentos para la mecánica estadística.
@@ -9,7 +156,7 @@ La mecánica estadística tiene como base el postulado de probabilidades iguales
 Este capítulo solo se enfocará en mostrar cómo la mayoría de los estados del universo están termalizados sin hablar en ningún momento de la evolución de estos estados. Si en general los estados del universo están termalizados se esperaría que cualquier evolución lleve los estados al equilibrio pero en el siguiente capítulo se darán especificaciones de esta conjetura junto con detalles que hacen ver las complicaciones de formalizar las ideas intuitivas que se tienen sobre el equilibrio.
 \\
 
-\subsection{Definiciones}
+\section{Definiciones}
 
 Antes de seguir sería preciso dar la notación que se usará a lo largo de este capítulo y el siguiente. Cuando se tenga un sistema cuántico grande descrito por un espacio de Hilbert $\mathcal{H}$  este se llamará el universo. Este universo será dividido en  dos subsistemas. El primero se llamará el sistema $S$  y el segundo se le dará el nombre de ambiente $E$, en ocasiones $S$ se le dirá subsistema y $E$ se le podrá llamar baño estos nombres son equivalentes a los anteriores. Esto lleva a descomponer $\mathcal{H}$ como $\mathcal{H}=\mathcal{H}_{S} \otimes \mathcal{H}_{E}$, con dimensiones $d_{S}$ y $d_{E}$ respectivamente, se supone que la dimensión del ambiente es mucho mayor que la del sistema. Para evitar espacios de dimensión infinita se introduce un tope para altas energías y así mantener la dimensión finita. Además se eliminarían términos de interacción del Hamiltoniano que lo lleven a subespacios no permitidos. Aún no se ha especificado nada sobre el subsistema o el ambiente (Excepto las proporciones de sus dimensiones)  esto permite decir que cualquier descomposición del espacio de Hilbert especifica un subsistema y un baño. El subsistema S puede ser cualquier cosa desde una partícula hasta el conjunto de partículas distribuidas por todo el baño.
 \\
